# vclust

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  makefile  pyproject.toml  test.py  vclust.py
.github/workflows/: deploy.yml  large.yml  main.yml  self-hosted.yml
data/: viridic.a2a  viridic.lz-ani  viridic.lz-ani_average.csv  viridic.lz-ani_complete.csv  viridic.lz-ani_single.csv  viridic.task  viridic.txt
data/viridic.set/: true_taxonomy.csv
data/viridic.set/fna/: NC_001271.1.fna  NC_001604.1.fna  NC_003298.1.fna  NC_004665.1.fna  NC_004777.1.fna  NC_007149.1.fna  NC_007456.1.fna  NC_008694.1.fna  NC_010807.1.fna  NC_011038.1.fna  NC_011040.1.fna  NC_011042.1.fna  NC_011043.1.fna  NC_011045.1.fna  NC_011085.3.fna  NC_011534.1.fna  NC_013647.1.fna  NC_013651.1.fna  NC_015159.1.fna  NC_015208.1.fna  NC_015249.1.fna  NC_015264.1.fna  NC_015271.1.fna  NC_015719.1.fna  NC_019416.1.fna  NC_019510.1.fna  NC_020483.1.fna  NC_021062.1.fna  NC_022744.1.fna  NC_023005.1.fna  NC_023548.1.fna  NC_023558.1.fna  NC_023576.1.fna  NC_023715.1.fna  NC_023736.1.fna  NC_024362.1.fna  NC_024379.1.fna  NC_025451.1.fna  (+23 more)
example/: README.txt  multifasta.fna  readme.txt
example/datasets/: README.txt  genbank.fna  other.fna  refseq.fna
example/fna/: NC_002486.alt.fna  NC_002486.fna  NC_002486.ref.fna  NC_005091.alt1.fna  NC_005091.alt2.fna  NC_005091.fna  NC_005091.ref.fna  NC_010807.alt1.fna  NC_010807.alt2.fna  NC_010807.alt3.fna  NC_010807.fna  NC_010807.ref.fna  NC_025457.alt1.fna  NC_025457.alt2.fna  NC_025457.fna  NC_025457.ref.fna
example/output/: ani.aln.tsv  ani.ids.tsv  ani.tsv  clusters.tsv  fltr.txt
src/: cluster.py
test/: multifasta.fna  readme.txt
test/fna/: 01.fna  02.fna  03.fna  04.fna  05.fna  06.fna  07.fna  08.fna  09.fna  10.fna  11.fna  12.fna
